--- a/index.html
+++ b/index.html
@@ -1,29 +1,24 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>E-Reservasi RSUD Kota Mataram | Log in</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+	<title>Privacy Policy</title>
+	<link rel="stylesheet" type="text/css" href="webcss.css">
 </head>
-<body class="hold-transition login-page">
-<div class="login-box" style="width: 80%;">
-  
-  <!-- /.login-logo -->
-  <div class="card">
-    <div class="card-body login-card-body">
-      <div class="login-logo">
-        <a href="javascript:void(0)"><b>E-Reservasi</b> <br>RSUD Kota Mataram</a>
-      </div>
-
-      <p class="login-box-msg">Privacy Policy</p>
-      <hr>
-
-      <p>
-        <b>Kebijakan Pribadi</b>
-      </p>
+<body>
+<center><h2>RSUD Kota Mataram</h2> </center>
+<center><h3>Privacy Policy</h3> </center>
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+<hr width="80%">
+</div>
+</center>
+<table align="center" width="75%">
+<tr>
+	<td>
+	<div id="tb">
+		<table align="center" width="100%">
+		<tr>
+       	<td><h3>Kebijakan Pribadi</h3>
+			<table align="center" width="80%">
       <p style="text-align: justify;">
         Pengguna dimohon untuk membaca kebijikan privasi ini terlebih dahulu dengan seksama untuk memastikan bahwa pengguna memahami bagaimana aplikasi reservasi online RSUD Kota Mataram mengumpulkan, menyimpan, menggunakan, memindahkan, mengungkapkan, dan melindungi informasi pribadi yang diperoleh melalui aplikasi kami.
       </p>
